# silent

./: CMakeLists.txt  Resource.h  headset.h  silent.cpp  silent.h  silent.rc  silentDlg.cpp  silentDlg.h  sound.cpp  sound.h  stdafx.cpp
res/: silent.rc2
